# STM32-Bare-Metal-Framework

./: README.md  stm32_toolchain.cmake
framework/include/framework/cli/: cli_handler.hpp  cli_provider.hpp  cli_provider_list.hpp
framework/include/framework/data/: ccitt_crc_16.hpp
framework/include/framework/drivers/: entropy.hpp  time.hpp  uart.hpp  usart1.hpp  usart2.hpp
framework/include/framework/io/: ascii.hpp  byte_listener.hpp  input_history.hpp  input_prompt.hpp  input_stream.hpp  io_stream.hpp  null_char_array_input_history.hpp  null_output_stream.hpp  null_string_input_history.hpp  output_stream.hpp  print_writer.hpp  string_input_history.hpp  text_io.hpp  text_reader.hpp
framework/include/framework/io/editproviders/: char_array_edit_buffer.hpp  char_array_edit_buffer_with_history.hpp  input_edit_provider.hpp  string_edit_buffer.hpp  string_edit_buffer_with_history.hpp
framework/include/framework/radiocontrol/: rc_decoder.hpp  rc_input.hpp  rc_input_statistics.hpp  rc_input_status.hpp  spektrum_srxl_decoder.hpp  srxl_statistics.hpp  srxl_status.hpp
framework/include/framework/rc/: spektrum_srxl_decoder.hpp
framework/include/framework/stm32f4/: exti.hpp  f446xx_irq_n.hpp  f446xx_weak_handlers.hpp  flash.hpp  fpu.hpp  gpio.hpp  nvic.hpp  pwr.hpp  rcc.hpp  rtc.hpp  scb.hpp  stk.hpp  stm32f4.hpp  timer.hpp  usart.hpp
framework/include/framework/tasking/: lambda_task.hpp  scheduler.hpp  task.hpp
framework/include/framework/utils/: ascii.hpp  data_utils.hpp  simple_callback.hpp  simple_timer.hpp  string_utils.hpp
framework/include/io/: input_stream.hpp  null_output_stream.hpp  print_writer.hpp  text_io.hpp  text_reader.hpp
framework/include/irq/: irq_consumer.hpp  irq_listeners.hpp  simple_irq_consumer.hpp  timer_irq_consumer.hpp
framework/include/stm32/: stm32.hpp  stm32_f446xx_irq_n.hpp  stm32_flash.hpp  stm32_fpu.hpp  stm32_gpio.hpp  stm32_nvic.hpp  stm32_pwr.hpp  stm32_rcc.hpp  stm32_scb.hpp  stm32_systick.hpp  stm32_timer.hpp  stm32_usart.hpp
framework/include/utils/: ascii.hpp  baud_rate.hpp  simple_timer.hpp  string_utils.hpp
framework/linker/: stm32_f446re_ldscript.ld  stm32f446re_ldscript.ld
framework/src/cli/: cli_handler.cpp  cli_provider.cpp
framework/src/drivers/: entropy.cpp  time.cpp  usart1.cpp  usart2.cpp
framework/src/io/: input_prompt.cpp  null_output_stream.cpp  null_string_input_history.cpp  print_writer.cpp  string_input_history.cpp  text_io.cpp  text_reader.cpp
framework/src/io/editproviders/: input_prompt.cpp  string_edit_buffer.cpp  string_edit_buffer_with_history.cpp
framework/src/irq/: irq_consumer.cpp  timer_irq_consumer.cpp
framework/src/radiocontrol/: rc_input.cpp  rc_input_statistics.cpp  rc_input_status.cpp  spektrum_srxl_decoder.cpp  srxl_statistics.cpp  srxl_status.cpp
framework/src/stm32/: stm32_f446xx_startup.cpp
framework/src/stm32f4/: stm32f446xx_startup.cpp
framework/src/tasking/: lambda_task.cpp  scheduler.cpp  task.cpp
framework/src/utils/: simple_timer.cpp  string_utils.cpp
random numbers/: CMakeLists.txt  README.md
random numbers/src/: main.cpp
simple button led flasher/: CMakeLists.txt  PreLoad.cmake
simple button led flasher/src/: main.cpp
simple flight controller/: CMakeLists.txt  PreLoad.cmake
simple flight controller/include/: adis_imu_driver.hpp  axes_values.hpp  cli_handler.hpp  cli_provider.hpp  cli_provider_list.hpp  led_driver.hpp  pid_controller.hpp  pinpoint_gyro_driver.hpp  pwm_servo_driver.hpp  sbus_driver.hpp  splash_text.hpp  stability_controller.hpp
simple flight controller/include/irq/: pendsv_handler.hpp  systick_handler.hpp  usart2_handler.hpp
simple flight controller/src/: adis_imu_driver.cpp  axes_values.cpp  cli_handler.cpp  cli_provider.cpp  led_driver.cpp  main.cpp  pid_controller.cpp  pinpoint_gyro_driver.cpp  pwm_servo_driver.cpp  sbus_driver.cpp  splash_text.cpp  stability_controller.cpp
simple flight controller/src/irq/: pendsv_handler.cpp  systick_handler.cpp  usart2_handler.cpp
systick delegated irq led flasher/: CMakeLists.txt
systick delegated irq led flasher/include/: systick_handler.hpp
systick delegated irq led flasher/src/: main.cpp  systick_handler.cpp
systick simple irq led flasher/: CMakeLists.txt
systick simple irq led flasher/include/: systick_delay_handler.hpp
systick simple irq led flasher/src/: main.cpp  systick_delay_handler.cpp
time provider test/: CMakeLists.txt
time provider test/src/: main.cpp
uart irq driver/: CMakeLists.txt
uart irq driver/include/: usart2_handler.hpp
uart irq driver/src/: main.cpp  usart2_handler.cpp
